--- a/cfg/train/baseline/baseline_o_0_sng_loader.yml
+++ b/cfg/train/baseline/baseline_o_0_sng_loader.yml
@@ -7,7 +7,7 @@ embedding_model: numberbatch
 embedding_size: '60'
 #embedding_size: '8'
 folder_dir: taskgrasp
-name: baseline_o_0_data_aug
+name: baseline_o_0
 pc_scaling: 'True'
 split_idx: '0'
 split_mode: o
